_module.less file updated for issue fixed #20163 On iPhone5 device newsletter subscription input box not contain complete text
_module.less file updated for issue fixed #20163 On iPhone5 device newsletter subscription input box not contain complete text

--- a/app/design/frontend/Magento/luma/Magento_Newsletter/web/css/source/_module.less
+++ b/app/design/frontend/Magento/luma/Magento_Newsletter/web/css/source/_module.less
@@ -47,7 +47,6 @@
 
         input {
             padding-left: 35px;
-            font-size: 12px;
         }
 
         .title {
@@ -80,5 +79,26 @@
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
     .block.newsletter {
         width: 34%;
+    }
+}
+
+//
+//  Mobile
+//  _____________________________________________
+
+.media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__m) {
+    .block{
+        &.newsletter {
+            input {
+                font-size: 12px;
+                padding-left: 30px;
+            }
+
+            .field {
+                .control:before{
+                    font-size: 13px;
+                }
+            }
+        }
     }
 }
